--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,13 @@
+server.port=8085
 
+spring.datasource.url=jdbc:mysql://localhost:3306/cookable?useSSL=false&serverTimezone=CET
+spring.datasource.username=root
+spring.datasource.password=
+
+logging.level.org.springframework.web= DEBUG
+
+spring.jpa.open-in-view=false
+spring.jpa.show-sql=true
+
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
